--- a/common/css/reset.css
+++ b/common/css/reset.css
@@ -64,30 +64,19 @@ hr {
 input, select { vertical-align: middle; }
 img { vertical-align: top; }
 
-.cursor{
-  z-index: 999;
-  position: fixed;
-  background: #2696E8;
-  width: 20px;
-  height: 20px;
+.cursor {
+  position: absolute;
+  height: 10px;
+  width: 10px;
   border-radius: 50%;
-  pointer-events: none;
-  box-shadow: 0 0 20px #2696E8,
-  0 0 60px #2696E8,
-  0 0 100px #2696E8;
-  animation: colors 5s infinite;
-  transform: translate(-50%, -50%);
-  display: none;
+  transform: translateX(-50%) translateY(-50%);
 }
 
+.cursor:nth-child(1) {
+  background-color: #E74C3C;
+  z-index: 1;
 }
-.cursor:before{
-  content: '';
-  position: absolute;
-  background: #2696E8;
-  width: 50px;
-  height: 50px;
-  opacity: 0.2;
-  transform: translate(-30%, -30%);
-  border-radius: 50%;
+
+.cursor:nth-child(2) {
+  background-color: #fff;
 }
