--- a/common/css/sp_layout.css
+++ b/common/css/sp_layout.css
@@ -443,19 +443,45 @@ header h1 img {
   word-break: keep-all;
 }
 
+div.clickEffect{
+  position:fixed;
+  box-sizing:border-box;
+  border-style:solid;
+  border-color:#FFFFFF;
+  border-radius:50%;
+  animation:clickEffect 0.4s ease-out;
+  z-index:99999;
+}
+@keyframes clickEffect{
+  0%{
+    opacity:1;
+    width:0.5em; height:0.5em;
+    margin:-0.25em;
+    border-width:0.5em;
+  }
+  100%{
+    opacity:0.2;
+    width:15em; height:15em;
+    margin:-7.5em;
+    border-width:0.03em;
+  }
+}
+
 .cursor {
-  position: absolute;
+  position: fixed;
   height: 10px;
   width: 10px;
   border-radius: 50%;
   transform: translateX(-50%) translateY(-50%);
+  pointer-events: none;
 }
 
 .cursor:nth-child(1) {
   background-color: #E74C3C;
-  z-index: 1;
+  z-index: 2;
 }
 
 .cursor:nth-child(2) {
   background-color: #fff;
+  z-index: 1;
 }
